autotests/syntax-tests/tests/negative/negative148.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name Name ; } Name { } ; $EXTERN Name $EENUM , Name , Name ; ; 